--- a/SlnSistemaCadastro/src/Devs2Blu.Projetos.SistemaCadastro.Forms/Devs2Blu.Projetos.SistemaCadastro.Forms.csproj
+++ b/SlnSistemaCadastro/src/Devs2Blu.Projetos.SistemaCadastro.Forms/Devs2Blu.Projetos.SistemaCadastro.Forms.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Data\ConnectionMySQL.cs" />
     <Compile Include="Data\ConvenioRepository.cs" />
+    <Compile Include="Data\EnderecoRepository.cs" />
     <Compile Include="Data\PacienteRepository.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
