[AnaLydiaMoreira] Segunda Atualizacao Design FormCadastroPaciente

--- a/SlnSistemaCadastro/src/Devs2Blu.Projetos.SistemaCadastro.Forms/Devs2Blu.Projetos.SistemaCadastro.Forms.csproj
+++ b/SlnSistemaCadastro/src/Devs2Blu.Projetos.SistemaCadastro.Forms/Devs2Blu.Projetos.SistemaCadastro.Forms.csproj
@@ -142,6 +142,8 @@
       <Name>Devs2Blu.Projetos.SistemaCadastro.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="img\logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
